# global-commerce-mcp

./: Dockerfile.python  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
ctx-wrapper/: Dockerfile  README.md  package.json  tsconfig.json
ctx-wrapper/src/: index.ts
ctx-wrapper/src/backend/: client.ts
ctx-wrapper/src/tools/: index.ts
ctx-wrapper/src/types/: schemas.ts
infrastructure/: AWS_DEPLOYMENT.md  cloudformation.yml  deploy.sh
migrations/: env.py
migrations/versions/: 001_initial.py
src/: __init__.py  api.py  main.py
src/alerts/: __init__.py  channels.py  engine.py  triggers.py
src/config/: settings.py
src/db/: __init__.py  database.py  models.py
src/db/repositories/: __init__.py  alert_repository.py  brand_repository.py  metrics_repository.py  (+1 more)
src/intelligence/: __init__.py  arbitrage.py  brand_analyzer.py  currency.py  engine.py  formatter.py
src/jobs/: __init__.py  scheduler.py
src/mcp/: __init__.py  server.py  tools.py
src/ml/: __init__.py  features.py  inference.py  model_registry.py  training.py
src/scrapers/: __init__.py  alibaba.py  amazon.py  base.py  ebay.py  flipkart.py  proxy_manager.py  shopify.py  walmart.py
src/signals/: __init__.py  competition.py  demand.py  discount_cycle.py  revenue.py  risk.py  trend.py
tests/: __init__.py  test_alert_engine.py  test_arbitrage.py  test_brand_analyzer.py  test_flipkart_tools.py  test_ml_models.py  test_multi_platform.py
tests/test_signals/: __init__.py  test_demand.py  test_revenue.py  test_risk.py
(+4 files in other folders)
